# discord-slack-bot-alert

./: .gitignore  README.md  bot.py  pyproject.toml
.devcontainer/: devcontainer.json
docker/: dev.Dockerfile
